# gam

./: .cct.txt  .compile_errors_snapshot.txt  .gitignore  .msi1033_acceptance.sbatch  .msi740_verify.sbatch  .msi979_multinom.sbatch  .msi979_profile.sbatch  .msi979_verify.sbatch  .msi_976_repro.sbatch  .mt_verify_sbatch.sh  .readthedocs.yaml  .tmp_cc932_verify.sh  .viol.txt  .viol_files.txt  ARTIFACT_SCHEMA.md  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  DONE.md  LICENSE  MATH_AUDIT_REPORT.md  PENALTY_BLOCKERS.md  PROMPT.md  README.md  README_PYPI.md  SPEC.md  STALL_REPRO.md  VERIFY_RESULTS.txt  aims.md  aims1_response.md  aims2.md  aims2_response.md  analyze_spectrum.py  aniso_fn_body.txt  anisotropic_kappa_math_asks.md  ban_history.txt  ban_owed_work_issues.txt  bench_reml.json  biobank_scale.yml  (+41 more)
crates/gam-cli/: Cargo.toml  INTEGRATION_NOTES.md
crates/gam-cli/src/: main.rs
crates/gam-cli/tests/: bug_hunt_all_zero_count_response_2255.rs  bug_hunt_compact_fit_result_drops_outer_certificate.rs  bug_hunt_expectile_cli_fit_aborts_on_frailty_guard.rs  bug_hunt_explicit_family_emits_wrong_inferred_family_note.rs  bug_hunt_predict_uncertainty_shifts_point_mean_for_curved_link.rs  bug_hunt_sas_link_finalize_inner_cap_leak.rs  bug_hunt_sas_link_outer_inner_cap_guard.rs  regression_bspline_nonzero_anchor_pin_2297.rs  regression_predict_cli_surfaces_covariance_provenance.rs  regression_predict_uncertainty_point_mean_linear_link.rs  regression_separated_binomial_predict_round_trips_2273.rs  spline_scan_persistence_acceptance_2302.rs
crates/gam-config/: Cargo.toml
crates/gam-config/src/: fit_request_document.rs  lib.rs
crates/gam-core/: Cargo.toml
crates/gam-core/src/: lib.rs  types.rs
crates/gam-custom-family/: Cargo.toml
crates/gam-custom-family/src/: assembly.rs  block_spec.rs  blockwise_solve.rs  coefficient_groups.rs  covariance.rs  custom_family_persistent_warm_start.rs  fit.rs  inner_blockwise_fit.rs  jeffreys.rs  joint_derivatives.rs  joint_newton.rs  lib.rs  outer_objective.rs  penalty_labels.rs  psi_design.rs  psi_hyper.rs  test_support.rs  tests.rs  warm_start.rs
crates/gam-data/: Cargo.toml  INTEGRATION_NOTES.md
crates/gam-data/src/: lib.rs
crates/gam-geometry/: Cargo.toml
crates/gam-geometry/src/: closure_family.rs  constant_curvature.rs  curvature_estimand.rs  euclidean.rs  grassmann.rs  integrator.rs  latent_seed.rs  lib.rs  lie_so.rs  manifold.rs  optimizer.rs  product.rs  response_geometry.rs  sae_routing.rs  spd.rs  stiefel.rs
crates/gam-gpu/: Cargo.toml
crates/gam-gpu/src/: backend_probe.rs  blas.rs  calibration.rs  cpu_traits.rs  device.rs  device_cache.rs  device_runtime.rs  dictionary_score.rs  driver.rs  encode_throughput.rs  gpu_error.rs  linalg_dispatch.rs  memory.rs  mod.rs  numerics_device.rs  numerics_host.rs  policy.rs  pool.rs  solver.rs
crates/gam-gpu/tests/: encode_full_path_throughput.rs  encode_k_scaling_throughput.rs
crates/gam-identifiability/: Cargo.toml
crates/gam-identifiability/src/: audit.rs  canonical.rs  kernel.rs  lib.rs  marginal_slope.rs  precondition.rs
crates/gam-inference/: Cargo.toml  INTEGRATION_NOTES.md
crates/gam-inference/src/: certificate_impls.rs  certificates.rs  conformal.rs  difference_smooth.rs  effects.rs  functionals.rs  gpu_polya_gamma.rs  hmc.rs  hmc_io.rs  lib.rs  marginal_slope_predict_tests.rs  model_comparison.rs  polya_gamma.rs  polya_gamma_core.rs  posterior_bands.rs  probability.rs  quadrature.rs  rho_posterior.rs  row_metric.rs  sample.rs  skovgaard.rs  truncated_gaussian.rs
crates/gam-linalg/: Cargo.toml
crates/gam-linalg/src/: decision.rs  dense.rs  error.rs  faer_ndarray.rs  gaussian_weighted_ridge_backward.rs  gpu_hook.rs  lanczos.rs  lib.rs  low_rank_weight.rs  pairwise_reduce.rs  parallel.rs  pcg.rs  psd_trust_region.rs  sparse_exact.rs  test_support.rs  triangular.rs  types.rs  utils.rs
crates/gam-math/: Cargo.toml  INTEGRATION_NOTES.md
crates/gam-math/src/: fidelity_metrics.rs  jet_algebra.rs  jet_cause_specific_oracle_tests.rs  jet_gamma_oracle_tests.rs  jet_gaulss_link_oracle_tests.rs  jet_gaussian_oracle_tests.rs  jet_multinomial_oracle_tests.rs  jet_partitions.rs  jet_poisson_oracle_tests.rs  jet_scalar.rs  jet_tower.rs  lib.rs  nested_dual.rs  order2_graph.rs  probability.rs  quantile.rs  score_opt.rs  special.rs
crates/gam-model-api/: Cargo.toml
crates/gam-model-api/src/: lib.rs
crates/gam-model-kernels/: Cargo.toml
crates/gam-model-kernels/src/: cell_moment_family.rs  cubic_cell_kernel.rs  inverse_link.rs  lib.rs  macros.rs  monotone_root.rs  penalized_projection.rs  scale_design.rs  sigma_link.rs
crates/gam-models/: Cargo.toml
crates/gam-models/src/: binomial_multi.rs  coefficient_cost.rs  cubic_cell_kernel.rs  custom_family.rs  family_runtime.rs  fast_channel.rs  fit_orchestration.rs  fnv1a.rs  gamlss.rs  inverse_link.rs  joint_penalty.rs  latent_coordinate.rs  location_scale_engine.rs  macros.rs  marginal_slope_orthogonal.rs  marginal_slope_shared.rs  matern_collapse_1629.rs  matern_collapse_1629_tests.rs  mod.rs  monotone_root.rs  multinomial.rs  multinomial_posterior.rs  multinomial_reml.rs  outer_subsample.rs  parameter_block.rs  penalized_vector_glm.rs  probe_1561_locscale_lambda_tests.rs  protocol.rs  repro_1629.rs  response_geometry.rs  row_kernel.rs  scale_design.rs  spatial_psi_bridge.rs  transformation_normal.rs  vector_response.rs  wiggle.rs
crates/gam-models/tests/: duchon_lambda_gap_measure.rs  (+5 more)
crates/gam-optimize/: Cargo.toml
crates/gam-predict/: Cargo.toml  INTEGRATION_NOTES.md
crates/gam-problem/: Cargo.toml
crates/gam-pyffi/: Cargo.toml  build.rs
crates/gam-report/: Cargo.toml
crates/gam-row-macros/: Cargo.toml
crates/gam-runtime/: Cargo.toml  INTEGRATION_NOTES.md
crates/gam-sae/: Cargo.toml
crates/gam-solve/: Cargo.toml
crates/gam-spec/: Cargo.toml
crates/gam-terms/: Cargo.toml
crates/gam-test-support/: Cargo.toml
services/steering_server/: API.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  otel-collector.yml  prometheus.yml  pyproject.toml  requirements.txt
(+6160 files in other folders)
