[package]
name = "gam"
version = "0.3.16"
edition = "2024"
rust-version = "1.93"
autobins = false
default-run = "gam"
description = "Generalized penalized likelihood engine"
license = "AGPL-3.0-or-later"
# Limit the published `.crate` to source + bench harnesses + license + readme.
# Without this, `bench/biobank_scale/` (>1 GB of benchmark data) and the
# `.lake/` lean toolchain cache are bundled into the package and crates.io
# rejects the upload at the 10 MiB limit. Patterns are gitignore-style;
# leading `/` anchors to crate root.
include = [
    "/src/**/*.rs",
    "/src/**/*.lean",
    "/src/**/*.pest",
    "/bench/cargo_benches/**/*.rs",
    "/build.rs",
    "/Cargo.toml",
    "/rust-toolchain.toml",
    "/rustfmt.toml",
    "/README.md",
    "/LICENSE",
]

[package.metadata.cargo-machete]
ignored = ["grep", "walkdir"]

[lib]
path = "src/lib.rs"

[workspace]
members = ["crates/gam-pyffi"]
resolver = "3"

[lints.rust]
warnings = "deny"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
comfy-table = "7.2.2"
rayon = "1.11.0"
rand = "0.10.0"
indicatif = "0.18.4"
ndarray = { version = "0.17.2", features = ["serde", "rayon"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
opt = "0.5.7"
log = "0.4.29"
csv = "1.4.0"
faer = "0.24.0"
dyn-stack = "0.13.2"
serde_json = "1.0.149"
ratatui = "0.30.0"
crossterm = "0.29.0"
rand_distr = "0.6.0"
tempfile = "3.27.0"
approx = "0.5.1"
zip = { version = "8.2.0", default-features = false, features = ["deflate"] }
statrs = "0.18.0"
pest = "2.8.6"
pest_derive = "2.8.6"
arrow = { version = "54", default-features = false, features = ["ffi"] }
parquet = { version = "54", default-features = false, features = ["arrow", "snap", "zstd", "lz4"] }
wide = "0.7"
smallvec = "1"

[dependencies.general-mcmc]
package = "general-mcmc"
version = "0.9.0"
default-features = false

[dev-dependencies]
num-dual = "0.13.6"
autodiff = "0.7.0"
ad_trait = "0.2.2"
criterion = "0.5"

[[bin]]
name = "gam"
path = "src/main.rs"

[[bench]]
name = "closed_form_pair_block"
path = "bench/cargo_benches/closed_form_pair_block.rs"
harness = false

[[bench]]
name = "closed_form_criterion"
path = "bench/cargo_benches/closed_form_criterion.rs"
harness = false

[[bench]]
name = "spatial_basis_construction"
path = "bench/cargo_benches/spatial_basis_construction.rs"
harness = false

[[bench]]
name = "bvn_biobank_shape"
path = "bench/cargo_benches/bvn_biobank_shape.rs"
harness = false

[[bench]]
name = "margslope_flex_biobank_hv"
path = "bench/cargo_benches/margslope_flex_biobank_hv.rs"
harness = false

[[bench]]
name = "non_affine_cell_hv_shape"
path = "bench/cargo_benches/non_affine_cell_hv_shape.rs"
harness = false

[[bench]]
name = "cell_moment_lru_biobank_shape"
path = "bench/cargo_benches/cell_moment_lru_biobank_shape.rs"
harness = false

[[bench]]
name = "tail_cell_memo_biobank_shape"
path = "bench/cargo_benches/tail_cell_memo_biobank_shape.rs"
harness = false

[[bench]]
name = "trust_region_line_search"
path = "bench/cargo_benches/trust_region_line_search.rs"
harness = false

[[bench]]
name = "line_search_subsample_screen"
path = "bench/cargo_benches/line_search_subsample_screen.rs"
harness = false

[[bench]]
name = "joint_line_search_speculative"
path = "bench/cargo_benches/joint_line_search_speculative.rs"
harness = false

[[bench]]
name = "cell_moment_dedup_biobank_shape"
path = "bench/cargo_benches/cell_moment_dedup_biobank_shape.rs"
harness = false

[[bench]]
name = "row_cell_moments_biobank_shape"
path = "bench/cargo_benches/row_cell_moments_biobank_shape.rs"
harness = false

[[bench]]
name = "bms_hv_row_skip"
path = "bench/cargo_benches/bms_hv_row_skip.rs"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1

# Iteration profile — drops `lto=thin` and uses 16 codegen units to cut
# rebuild time from ~5 min to ~90 s while keeping `opt-level = 3`. Use via
# `cargo build --profile release-dev --bin gam`. Runtime perf is typically
# ~85–95% of full release (LTO is the main loss); good enough for local
# timing comparisons that aren't differentiating sub-10% perf wins.
[profile.release-dev]
inherits = "release"
lto = false
codegen-units = 16
debug = false


