[package]
name = "gam"
version = "0.3.148"
edition = "2024"
rust-version = "1.93"
autobins = false
description = "Generalized penalized likelihood engine"
license = "AGPL-3.0-or-later"
# Limit the published `.crate` to source + bench harnesses + license + readme.
# Without this, `bench/large_scale/` (>1 GB of benchmark data) is bundled
# into the package and crates.io rejects the upload at the 10 MiB limit.
# Patterns are gitignore-style; leading `/` anchors to crate root.
include = [
    "/src/**/*.rs",
    "/src/**/*.pest",
    "/bench/cargo_benches/**/*.rs",
    "/build.rs",
    "/Cargo.toml",
    "/rust-toolchain.toml",
    "/README.md",
    "/LICENSE",
]

[package.metadata.cargo-machete]
ignored = ["grep", "walkdir"]

[lib]
path = "src/lib.rs"

[workspace]
# A `gam-core` leaf-crate split was attempted under #1521 but reverted: with the
# entire high-churn engine still living in `gam`, a `gam-core` leaf produced no
# rebuild cut (a families/solver/terms edit still recompiles all of `gam`) while
# adding a `publish = false` path-dependency under a publishable crate. The
# measured first cut is the opposite direction — peel upper leaves (predict, CLI)
# off a temporarily-monolithic engine. See the #1521 thread for the plan.
members = [
    "crates/gam-data",
    "crates/gam-spec",
    "crates/gam-linalg",
    "crates/gam-optimize",
    "crates/gam-geometry",
    "crates/gam-model-api",
    "crates/gam-gpu",
    "crates/gam-identifiability",
    "crates/gam-terms",
    "crates/gam-solve",
    "crates/gam-model-kernels",
    "crates/gam-custom-family",
    "crates/gam-models",
    "crates/gam-inference",
    "crates/gam-report",
    "crates/gam-config",
    "crates/gam-sae",
    "crates/gam-cli",
    "crates/gam-math",
    "crates/gam-predict",
    "crates/gam-problem",
    "crates/gam-pyffi",
    "crates/gam-runtime",
    "crates/gam-test-support",
]
resolver = "3"

[lints.rust]
warnings = "deny"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
comfy-table = "7.2.2"
rayon = "1.12.0"
rand = "0.10.1"
ndarray = { version = "0.17.2", features = ["serde", "rayon"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
opt = "0.5.2"
log = "0.4.29"
libloading = "0.8.9"
csv = "1.4.0"
faer = "0.24.0"
memmap2 = "0.9.10"
dyn-stack = "0.13.2"
# `float_roundtrip` makes the JSON parser bit-exact for f64: serialization
# (ryu) is already shortest-round-trippable, but the DEFAULT parser can be off
# by 1 ULP on some values, so a saved model could predict infinitesimally
# differently than the in-memory fit. Required for bit-for-bit model
# persistence (e.g. the #1034 spline-scan smoother state).
serde_json = { version = "1.0.149", features = ["float_roundtrip"] }
rand_distr = "0.6.0"
statrs = "0.18.0"
libm = "0.2.16"
# Foundation crates extracted under #1521. They publish to crates.io as part of
# the gam family so the published `gam` crate's path dependencies resolve to real
# registry versions. The exact `=` pin keeps the family lock-stepped: a given
# `gam` release only ever builds against the foundation crates it was compiled
# against (their cross-crate surface is internal and unstable).
gam-data = { path = "crates/gam-data", version = "=0.3.148" }
gam-math = { path = "crates/gam-math", version = "=0.3.148" }
gam-problem = { path = "crates/gam-problem", version = "=0.3.148" }
gam-spec = { path = "crates/gam-spec", version = "=0.3.148" }
gam-runtime = { path = "crates/gam-runtime", version = "=0.3.148" }
gam-linalg = { path = "crates/gam-linalg", version = "=0.3.148" }
gam-geometry = { path = "crates/gam-geometry", version = "=0.3.148" }
gam-model-api = { path = "crates/gam-model-api", version = "=0.3.148" }
gam-gpu = { path = "crates/gam-gpu", version = "=0.3.148" }
gam-identifiability = { path = "crates/gam-identifiability", version = "=0.3.148" }
gam-terms = { path = "crates/gam-terms", version = "=0.3.148" }
gam-solve = { path = "crates/gam-solve", version = "=0.3.148" }
gam-models = { path = "crates/gam-models", version = "=0.3.148" }
gam-inference = { path = "crates/gam-inference", version = "=0.3.148" }
gam-report = { path = "crates/gam-report", version = "=0.3.148" }
gam-config = { path = "crates/gam-config", version = "=0.3.148" }
gam-sae = { path = "crates/gam-sae", version = "=0.3.148" }
# Shared test-support helpers (FD harness, fixtures, reference-tool + CLI
# harnesses) carved into their own crate under #1521 so the workspace's other
# crates can reach them cross-crate from their `#[cfg(test)]` modules. The root
# `gam` crate re-exports it as `gam::test_support` (and re-exports its
# `#[macro_export]` macros) so the integration tests under `tests/` keep their
# `gam::test_support::*` / `gam::gam_binary!` paths unchanged.
gam-test-support = { path = "crates/gam-test-support", version = "=0.3.148" }
pest = "2.8.6"
pest_derive = "2.8.6"
arrow = { version = "54", default-features = false, features = ["ffi"] }
parquet = { version = "54", default-features = false, features = ["arrow", "snap", "zstd", "lz4"] }
wide = "0.7"
smallvec = "1"
sha2 = "0.10.8"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

[target.'cfg(target_os = "linux")'.dependencies]
cudarc = { version = "0.19.6", default-features = false, features = ["std", "driver", "runtime", "nvrtc", "cublas", "cublaslt", "cusparse", "cusolver", "cusolvermg", "curand", "nvtx", "cupti", "fallback-dynamic-loading", "cuda-13000"] }

[dependencies.general-mcmc]
package = "general-mcmc"
version = "0.9"
default-features = false

[dev-dependencies]
num-dual = "0.13.6"
autodiff = "0.7.0"
ad_trait = "0.3.0"
criterion = "0.8"
tempfile = "3.27.0"
approx = "0.5.1"
# The prediction engine (predict_gamwith_uncertainty, PredictUncertaintyOptions,
# InferenceCovarianceMode, MeanIntervalMethod, ...) was peeled out of `gam` into
# the upper-leaf `gam-predict` crate. `gam-predict` depends on `gam`, so it
# cannot be a normal dependency, but the integration tests that exercise
# prediction need it: a dev-dependency that points back at the owning crate is
# the standard, cycle-free way to give the test build access to a peeled-off
# leaf.
gam-predict = { path = "crates/gam-predict" }

[[bench]]
name = "stagewise_batched_births"
path = "bench/cargo_benches/stagewise_batched_births.rs"
harness = false

[[bench]]
name = "sparse_dict_router_topk"
path = "bench/cargo_benches/sparse_dict_router_topk.rs"
harness = false

[[bench]]
name = "closed_form_pair_block"
path = "bench/cargo_benches/closed_form_pair_block.rs"
harness = false

[[bench]]
name = "closed_form_criterion"
path = "bench/cargo_benches/closed_form_criterion.rs"
harness = false

[[bench]]
name = "spatial_basis_construction"
path = "bench/cargo_benches/spatial_basis_construction.rs"
harness = false

[[bench]]
name = "bvn_large_scale_shape"
path = "bench/cargo_benches/bvn_large_scale_shape.rs"
harness = false

[[bench]]
name = "margslope_flex_large_scale_hv"
path = "bench/cargo_benches/margslope_flex_large_scale_hv.rs"
harness = false

[[bench]]
name = "non_affine_cell_hv_shape"
path = "bench/cargo_benches/non_affine_cell_hv_shape.rs"
harness = false

[[bench]]
name = "cell_moment_lru_large_scale_shape"
path = "bench/cargo_benches/cell_moment_lru_large_scale_shape.rs"
harness = false

[[bench]]
name = "tail_cell_memo_large_scale_shape"
path = "bench/cargo_benches/tail_cell_memo_large_scale_shape.rs"
harness = false

[[bench]]
name = "trust_region_line_search"
path = "bench/cargo_benches/trust_region_line_search.rs"
harness = false

[[bench]]
name = "line_search_subsample_screen"
path = "bench/cargo_benches/line_search_subsample_screen.rs"
harness = false

[[bench]]
name = "joint_line_search_speculative"
path = "bench/cargo_benches/joint_line_search_speculative.rs"
harness = false

[[bench]]
name = "cell_moment_dedup_large_scale_shape"
path = "bench/cargo_benches/cell_moment_dedup_large_scale_shape.rs"
harness = false

[[bench]]
name = "row_cell_moments_large_scale_shape"
path = "bench/cargo_benches/row_cell_moments_large_scale_shape.rs"
harness = false

[[bench]]
name = "bms_hv_row_skip"
path = "bench/cargo_benches/bms_hv_row_skip.rs"
harness = false

[[bench]]
name = "pirls_gpu_bench"
path = "bench/cargo_benches/pirls_gpu_bench.rs"
harness = false

[[bench]]
name = "reml_gpu_bench"
path = "bench/cargo_benches/reml_gpu_bench.rs"
harness = false

[[bench]]
name = "arrow_schur_gpu_bench"
path = "bench/cargo_benches/arrow_schur_gpu_bench.rs"
harness = false

[[bench]]
name = "cubic_hex_tensor_gpu_parity"
path = "bench/cargo_benches/cubic_hex_tensor_gpu_parity.rs"
harness = false

[[bench]]
name = "sae_arrow_schur_bench"
path = "bench/cargo_benches/sae_arrow_schur_bench.rs"
harness = false

[[example]]
name = "arrow_schur_hill_climb"
path = "examples/perf/arrow_schur_hill_climb.rs"

[[example]]
name = "sae_perf_harness"
path = "examples/sae_perf_harness.rs"

[[example]]
name = "sae_hillclimb_envelope_1017"
path = "examples/sae_hillclimb_envelope_1017.rs"

[[example]]
name = "cyl_family_repro"
path = "examples/cyl_family_repro.rs"

[[example]]
name = "binomial_pspline_perf_1575"
path = "examples/binomial_pspline_perf_1575.rs"

[profile.release]
lto = "thin"
codegen-units = 1

# Test profile — strip full DWARF and only keep line tables. With ~300
# integration test targets under `tests/`, the default `debug = true` profile
# emits ~150–500 MB of DWARF per linked test binary; on a vanilla ubuntu-latest
# runner the link stage exhausts the ~30 GB the workflow frees after wiping
# preinstalled toolchains, surfacing as `linking with cc failed: exit status:
# 1` / `No space left on device`. `line-tables-only` keeps backtraces
# resolvable to file:line and panic locations intact while cutting each test
# binary by roughly 5–10×, which is what drives the disk back below the
# ceiling and makes the link reliable rather than relying on whatever the
# preinstalled-toolchain wipe yields on a given runner image.
[profile.test]
debug = "line-tables-only"
# Optimize the WORKSPACE crates in test builds, not just the dependencies below.
# The heaviest single `#[test]` solver fits — the #979 survival marginal-slope
# and #1593 competing-risks CIF regressions — spend their time in the gam-*
# workspace numerical crates (orchestration, survival/joint-Newton, REML/PIRLS,
# the per-row Hessian assembly), NOT in third-party kernels. Cargo's
# `package."*"` glob (below) only reaches dependencies, so leaving the base test
# profile at opt-level 0 left that workspace hot path unoptimized; on slower CI
# runners those fits ran long enough to cross nextest's 600s per-test kill and
# fail as opaque SIGKILL timeouts. opt-level 2 here keeps numerical results
# identical (Rust does not enable fast-math, and the dependency kernels were
# already optimized) and does NOT reintroduce the DWARF disk cliff — that is
# governed by `debug` above, independent of opt-level — so it is a pure runtime
# win that lets those solver-bound tests finish and self-report well inside the
# per-test cap.
opt-level = 2

# Dev/`maturin develop` profile — same rationale as [profile.test]. Cargo's
# default dev profile emits full DWARF (`debug = 2`), which is what lets
# `target/` balloon to ~30 GB (the dep + crate object files carry the bulk of
# it). `line-tables-only` keeps backtraces resolvable to file:line and panic
# locations while cutting the bulk of the debuginfo, so the dev target stays
# a few GB instead of tens.
[profile.dev]
debug = "line-tables-only"

# Dependencies carry most numeric inner loops in DEV builds
# (faer/matrixmultiply GEMM tiles, ndarray kernels, rayon): compile THEM
# optimized while the workspace crate stays cheap for edit/compile iteration.
# The dev profile keeps the workspace crate at Cargo's default opt level so
# local `maturin develop` / `cargo build` iteration does not materialize a huge
# optimized `gam` artifact; the numeric dependency kernels below still compile
# optimized, which is the hot-loop win without the iteration tax.
[profile.dev.package."*"]
opt-level = 2

# Test builds optimize the workspace crates too (see opt-level on [profile.test]
# above); this glob additionally optimizes the third-party numeric kernels, so
# the whole test hot path — workspace solver code plus dependency kernels — runs
# optimized.
[profile.test.package."*"]
opt-level = 2

# Iteration profile — drops `lto=thin` and uses 16 codegen units to cut
# rebuild time from ~5 min to ~90 s while keeping `opt-level = 3`. Use via
# `cargo build --profile release-dev --bin gam`. Runtime perf is typically
# ~85–95% of full release (LTO is the main loss); good enough for local
# timing comparisons that aren't differentiating sub-10% perf wins.
[profile.release-dev]
inherits = "release"
lto = false
codegen-units = 16
debug = false

# PyPI wheel profile — tuned for MAXIMUM runtime performance on large-scale
# workloads, accepting longer CI build times in exchange.
#
#   * `lto = "fat"` — whole-program LTO across all crates including
#     dependencies. Squeezes out cross-crate inlining that thin-LTO
#     misses; large-scale numerics gain ~5–10 % over thin-LTO from
#     better inlining of `faer` / `ndarray` inner loops into the
#     custom-family hot paths.
#
#   * `codegen-units = 1` — single codegen unit per crate. Forces the
#     full crate to be optimized as one IR module so monomorphization
#     constants and per-call autovec opportunities aren't fragmented
#     across parallel codegen workers. Empirically ~2–3 % runtime
#     improvement at large scale over `codegen-units = 16`, on top
#     of the LTO win.
#
#   * `opt-level = 3` — pinned explicitly. It is also the `release`
#     default, but the dev/test profiles drop dependencies to
#     `opt-level = 2`, so pinning documents that the SHIPPED numeric
#     hot loops are built at max scalar/autovec optimization.
#
#   * `panic = "unwind"` — MUST stay unwind, NOT abort. PyO3 wraps every
#     `#[pyfunction]`/`#[pymethods]` entry point in `catch_unwind` to turn
#     a Rust panic into a Python `PanicException` at the FFI boundary. With
#     `panic = "abort"` a panic anywhere in the engine would SIGABRT the
#     host interpreter instead of raising a catchable Python exception — a
#     crash-vs-exception behavior change. The unwind-table removal (faster +
#     smaller) is therefore deliberately DECLINED at this FFI boundary.
#
#   * `strip = true` — strip both the symbol table and debuginfo from the
#     shipped `cdylib`: smaller wheel, zero runtime cost (release carries no
#     line tables anyway). Maturin's `--strip` is kept as a redundant
#     post-link strip.
#
# Combined cost: cold-cache wheel builds go from ~12 min to ~22 min on
# the slowest runner (macos-15-intel). NOTE: sccache caches per-crate
# codegen but NOT the final whole-program fat-LTO link, so warm rebuilds
# still pay the fat-LTO link each run (a few minutes) — slower than the
# thin-LTO warm path. For PyPI consumers who pip-install once and run
# large-scale fits for hours, the runtime win is the production lever; the
# build-time hit is amortized to ~zero. When a faster turnaround is needed
# during development, dispatch the workflow with `scope=x86` to skip the
# slow macOS + Windows + aarch64 matrices entirely.
#
# This is a DEDICATED profile (not a change to `[profile.release]`) so the
# CLI release binary (build-release-all.yml, disk-tight CUDA runner), the
# nextest/test builds, benches, fuzz, and large_scale `--release` builds
# all keep thin-LTO — only the shipped wheel pays the fat-LTO build cost.
# Selected by pypi-wheels.yml via `--profile release-pypi`.
[profile.release-pypi]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
debug = false
strip = true
