[package]
name = "gam-cli"
version = "0.3.123"
edition = "2024"
rust-version = "1.93"
publish = false

[[bin]]
name = "gam"
path = "src/main.rs"

[dependencies]
gam = { path = "../.." }
gam-data = { path = "../gam-data" }
gam-inference = { path = "../gam-inference" }
gam-predict = { path = "../gam-predict" }
gam-runtime = { path = "../gam-runtime" }
clap = { version = "4.6.1", features = ["derive"] }
comfy-table = "7.2.2"
csv = "1.4.0"
faer = "0.24.0"
log = "0.4.29"
ndarray = { version = "0.17.2", features = ["serde", "rayon"] }
rand = "0.10.1"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["float_roundtrip"] }
statrs = "0.18.0"
thiserror = "2.0.18"

[lints.rust]
warnings = "deny"
